@@ -255,6 +255,14 @@ Build
 
 - Issue #25136: Support Apple Xcode 7's new textual SDK stub libraries.
 
+Tools/Demos
+-----------
+
+- Issue #26799: Fix python-gdb.py: don't get C types once when the Python code
+  is loaded, but get C types on demand. The C types can change if
+  python-gdb.py is loaded before the Python executable. Patch written by Thomas
+  Ilsche.
+
 C API
 -----
 
